Update PostController.java